Fix color contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,9 @@ body {
   font-family: 'Inter';
   font-style: normal;
 }
+a {
+  color: #000;
+}
 .top-header {
   background-color: white;
   position: sticky;
@@ -99,7 +102,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #beb45a;
+  background-color: #5e5926;
   border-radius: 0;
 }
 .nav-pills .nav-link {
